# gemini-workflow-bridge-mcp

./: .env.example  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: _reusable-test-build.yml
hitoshura25_gemini_workflow_bridge/: __init__.py  cache_manager.py  cli.py  codebase_loader.py  gemini_client.py  generator.py  resources.py  server.py  tool_registry.py
hitoshura25_gemini_workflow_bridge/prompts/: fact_extraction_system_prompt.txt
hitoshura25_gemini_workflow_bridge/tests/: __init__.py  conftest.py  test_cache_manager.py  test_gemini_client.py  test_generator.py  test_prefix_system.py  test_progressive_disclosure.py  test_retry.py  test_server.py  test_setup_workflows.py
hitoshura25_gemini_workflow_bridge/tools/: __init__.py  check_consistency.py  find_code_by_intent.py  generate_command.py  generate_workflow.py  list_patterns.py  query_codebase.py  setup_workflows.py  trace_feature.py  validate_spec.py  workflow_templates.py
hitoshura25_gemini_workflow_bridge/utils/: __init__.py  json_parser.py  prompt_loader.py  retry.py  token_counter.py  validation.py
hitoshura25_gemini_workflow_bridge/workflows/: feature_template.md  refactor_template.md
specs/: automatic-context-reuse-implementation-plan.md  retry-prefix-progressive-disclosure.md
